--- a/static/img/services_responsive_design.html
+++ b/static/img/services_responsive_design.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <svg-animate trigger="visible">
+    <svg-animate trigger="hover">
       <svg viewBox="0 0 1379 552" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:anim="http://www.w3.org/2000/anim" anim="" anim:transform-origin="50% 50%" anim:duration="1" anim:ease="ease-in-out">
         <g id="Group 26">
           <g id="PC">
@@ -17,11 +17,10 @@
           </g>
           <g id="Group 20">
             <g id="Group 25" anim:opacity="0[0:0.9:1:ease-in-out]" anim:scale="0.5[0:1:1:ease-in-out]">
-              <rect id="Rectangle 29_2" x="891.028" y="267" width="390.972" height="270" rx="5" fill="#B0AEAE"></rect>
-              <rect id="Rectangle 31_2" x="891.028" y="512" width="390.972" height="40" rx="5" fill="#B0AEAE"></rect>
-              <rect id="Rectangle 27_2" x="891.986" y="275" width="389.056" height="244" fill="black"></rect>
-              <rect id="Rectangle 30_2" x="891.986" y="268" width="389.056" height="14" rx="7" fill="black"></rect>
-              <rect id="image_2" x="905.402" y="282" width="362.224" height="225" rx="5" fill="url(#pattern1_234_100)"></rect>
+              <rect id="Rectangle 31_2" x="892" y="512" width="416" height="40" rx="5" fill="#B0AEAE"></rect>
+              <rect id="Rectangle 27_2" x="892.024" y="275" width="415.975" height="244" fill="black"></rect>
+              <rect id="Rectangle 30_2" x="892.024" y="268" width="415.975" height="14" rx="7" fill="black"></rect>
+              <rect id="image_2" x="903.087" y="282" width="393.435" height="225" rx="5" fill="url(#pattern1_234_100)"></rect>
             </g>
           </g>
           <g id="Group 17">
@@ -43,7 +42,7 @@
             <use xlink:href="#image0_234_100" transform="matrix(0.001001 0 0 0.00136277 0 0.15113)"></use>
           </pattern>
           <pattern id="pattern1_234_100" patternContentUnits="objectBoundingBox" width="1" height="1">
-            <use xlink:href="#image1_234_100" transform="matrix(0.000808805 0 0 0.00130208 -0.0524138 0)"></use>
+            <use xlink:href="#image1_234_100" transform="matrix(0.000744644 0 0 0.00130208 -0.00859152 0)"></use>
           </pattern>
           <pattern id="pattern2_234_100" patternContentUnits="objectBoundingBox" width="1" height="1">
             <use xlink:href="#image2_234_100" transform="matrix(0.00279625 0 0 0.00215054 -0.0326852 0)"></use>
