--- a/static/img/services_responsive_design.html
+++ b/static/img/services_responsive_design.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <svg-animate trigger="hover">
+    <svg-animate trigger="visible">
       <svg viewBox="0 0 1379 552" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:anim="http://www.w3.org/2000/anim" anim="" anim:transform-origin="50% 50%" anim:duration="1" anim:ease="ease-in-out">
         <g id="Group 26">
           <g id="PC">
